# leanOpenGL2

./: .gitignore  CMakeLists.txt
demo1/: CMakeLists.txt
demo1/include/: shader_s.h
demo1/old/: a.cc  main1.cpp  main2.cpp  main_2_texture.cpp  main_color_gradient.cpp  main_color_texture.cpp  main_my_shader.cpp  main_texture.cpp  main_two_triangle_color.cpp
old/: main3.cpp  main4.cpp
